Fixed the horizontal scrollbar issue by reducing letterspacing for h1 under .cta

--- a/less/index.less
+++ b/less/index.less
@@ -65,7 +65,7 @@ html, body {
 
 h1, h2, h3, h4, h5 {
     font-family: 'Bangers', cursive;
-    letter-spacing: 1px;
+    letter-spacing: 0.1rem;
     margin-bottom: 10px;
 }
 
@@ -200,6 +200,12 @@ h1, h2, h3, h4, h5 {
                 display: flex;
                 max-width: 100%;
                 width: 100%;
+            }
+
+            h1 {
+                @media (max-width: 400px){
+                    letter-spacing: 0.02rem;
+                }
             }
         }
 
